Sua xong xuat file